--- a/templates/cohorts/cohort_details.html
+++ b/templates/cohorts/cohort_details.html
@@ -27,41 +27,45 @@
 {% block page_name %}cohort-details{% endblock %}
 
 {% block page_header %}
-    <div class="container">
-        <div class="row">
-            <div class="menu-bar">
-                <div class="cohort-title col-md-8">
-                    <h3>{{ cohort.name }}</h3>
-                </div>
-                <div class="menu-items-right col-md-4">
-                    <a class="btn btn-default space-top-5" id="cancel-add-filter-btn" style="display:none;">Cancel</a>
-                    <a class="btn btn-primary space-top-5" data-toggle="modal" data-target="#apply-filters-modal" style="display:none;">Apply New Filters</a>
-                    <div class="dropdown dropdown-menu-right space-top-5">
-                        <a role="button" class="dropdown-toggle " type="button" id="create-dropdown" data-toggle="dropdown" aria-label="create-item" aria-expanded="true">
-                            <i class="fa fa-bars"></i>
-                        </a>
-                        <ul class="dropdown-menu dropdown-menu-right" role="menu" aria-labelledby="create-dropdown">
-                            {% if cohort.perm.perm == 'OWNER' %}
-                            <li role="menuitem"><a href="#" id="add-filter-btn">Add New Filters</a></li>
-                            {% endif %}
-                            <li role="menuitem"><a href="#" class="show-flyout" title="Show Comments">Comments</a></li>
-    {#                        <li role="presentation"><a href="#">Edit Barcodes</a></li>#}
-                            {% if cohort.perm == 'OWNER' %}
-                            <li role="menuitem"><a href="#" data-toggle="modal" data-target="#delete-cohort-modal">Delete Cohort</a></li>
-                            <li role="menuitem" class="divider"></li>
-                            {% endif %}
-    {#                        <li role="presentation"><a href="#">Revision History</a></li>#}
+    <ol class="breadcrumb">
+        <li><a href="{% url 'dashboard' %}">Your Dashboard</a></li>
+        <li><a href="{% url 'cohort_list' %}">Saved Cohorts</a></li>
+    </ol>
+    <h1 class="page-header">{{ cohort.name }}</h1>
 
-                            <li role="menuitem"><a href="{% url 'clone_cohort' cohort.id %}">Make a Copy</a></li>
-                            {% if cohort.perm.perm == 'OWNER' %}
-                            <li role="menuitem"><a href="#" data-toggle="modal" data-target="#share-cohort-modal">Share with Others</a></li>
-                            {% endif %}
-    {#                        <li role="presentation"><a href="#">Export to Google Cloud Platform</a></li>#}
-                        </ul>
-                    </div>
-                </div>
-            </div>
-        </div>
+    <div class="page-action-group">
+        {% if cohort.perm.perm != 'OWNER' %}
+            <span>Owner: {{ cohort.owner }}</span>
+        {% endif %}
+
+        <ul id="default-cohort-menu">
+            <li class="menu-item"><a href="" class="btn btn-default">New Workbook</a></li>
+            <li class="separator"></li>
+            {% if cohort.perm.perm == 'OWNER' %}
+                <li class="menu-item"><button class="btn btn-primary" id="add-filter-btn">Edit</button> </li>
+            {% endif %}
+            <li class="menu-item"><button class="show-flyout btn btn-primary" title="Show Comments">Comments</button></li>
+            <!-- TODO: duplicate is not working-->
+            <li class="menu-item"><a href="{% url 'clone_cohort' cohort.id %}" class="btn btn-primary">Duplicate</a></li>
+            <li class="menu-item"><button class="btn btn-primary" data-toggle="modal" data-target="#delete-cohort-modal">
+                {% if cohort.perm.perm == 'OWNER' %}
+                    Delete
+                {% else %}
+                    Remove
+                {% endif %}
+            </button></li>
+            <li class="separator"></li>
+            {% if cohort.perm.perm == 'OWNER' %}
+            <li class="menu-item"><button class="btn btn-info" data-toggle="modal" data-target="#share-cohort-modal">Share</button></li>
+            {% endif %}
+            <li class="menu-item"><a href="" class="btn btn-link">Shared with (5)</a></li>
+        </ul>
+        <ul id="edit-cohort-menu" style="display: none">
+            {% if cohort.perm.perm == 'OWNER' %}
+                <li class="menu-item"><button class="btn btn-primary" data-toggle="modal" data-target="#apply-filters-modal">Save Changes</button></li>
+                <li class="menu-item"><button class="btn btn-link" id="cancel-add-filter-btn">Cancel</button></li>
+            {% endif %}
+        </ul>
     </div>
 {% endblock %}
 
@@ -75,50 +79,56 @@
             </ul>
             <div class="tab-content">
                 <div role="tabpanel" class="tab-pane active" id="clinical-filters">
-                    <div class="panel-group" id="clin-accordion" role="tablist" aria-multiselectable="true">
+                    <ul class="list-group" id="clin-accordion" role="tablist" aria-multiselectable="true">
                         {% for attr in clin_attr %}
                             {% if attr in attr_list_count %}
-                                <div class="panel panel-default">
-                                    <a role="button" data-toggle="collapse" data-parent="#clin-accordion" href="#collapse-{{ attr }}" aria-expanded="true" aria-controls="collapse-{{ attr }}">
-                                        <div class="panel-heading" role="tab" id="heading-{{ attr }}"><i class="fa fa-caret-right"></i><i class="fa fa-caret-down" style="display:none;"></i> {{ attr|get_readable_name }}</div>
-                                    </a>
-                                    <div id="collapse-{{ attr }}" class="panel-collapse collapse" role="tabpanel" aria-labelledby="heading-{{ attr }}">
-                                        <div class="panel-body">
-                                            <ul class="search-checkbox-list" id="{{ attr }}">
-                                                {% with attr_list_count|get_item:attr|how_many_more:6 as num_more %}
-                                                    {% for v in attr_list_count|get_item:attr %}
-                                                        {% if forloop.counter0 < 6 %}
-                                                            <li>
-                                                                <input type="checkbox" name="elements-selected" id="{{ attr }}-{{ v.value|replace_whitespace:'_' }}" >
-                                                                <label for="{{ attr }}-{{ v.value|replace_whitespace:'_' }}">{% if v.value == 'None' %}NA{% else %}{{ v.value }}{% endif %}</label>
-                                                                <span class="count">({{ v.count }})</span>
-                                                            </li>
-                                                        {% elif forloop.counter0 == 6 and num_more > 0 %}
-                                                            <a class="show-more">{{ num_more }} more</a>
-                                                            <li class="extra-values" style="display:none;">
-                                                                <input type="checkbox" name="elements-selected" id="{{ attr }}-{{ v.value|replace_whitespace:'_' }}" >
-                                                                <label for="{{ attr }}-{{ v.value|replace_whitespace:'_' }}">{% if v.value == 'None' %}NA{% else %}{{ v.value }}{% endif %}</label>
-                                                                <span class="count">({{ v.count }})</span>
-                                                            </li>
-                                                        {% else %}
-                                                            <li class="extra-values" style="display:none;">
-                                                                <input type="checkbox" name="elements-selected" id="{{ attr }}-{{ v.value|replace_whitespace:'_' }}" >
-                                                                <label for="{{ attr }}-{{ v.value|replace_whitespace:'_' }}">{% if v.value == 'None' %}NA{% else %}{{ v.value }}{% endif %}</label>
-                                                                <span class="count">({{ v.count }})</span>
-                                                            </li>
-                                                        {% endif %}
-                                                    {% endfor %}
-                                                    {% if num_more > 0 %}
-                                                        <a class="show-less" style="display:none;">less</a>
-                                                    {% endif %}
-                                                {% endwith %}
-                                            </ul>
-                                        </div>
+                                <li class="list-group-item">
+                                    <div id="heading-{{attr}}" class="list-group-item__heading">
+                                        <a role="button" data-toggle="collapse" data-parent="#clin-accordion" href="#collapse-{{ attr }}" aria-expanded="true" aria-controls="collapse-{{ attr }}">
+                                            <i class="fa fa-caret-right"></i><i class="fa fa-caret-down"></i> {{ attr|get_readable_name }}
+                                        </a>
                                     </div>
-                                </div>
+
+                                    <div id="collapse-{{ attr }}" class="list-group-item__body collapse" role="tabpanel" aria-labelledby="heading-{{ attr }}">
+                                        <ul class="search-checkbox-list" id="{{ attr }}">
+                                            {% with attr_list_count|get_item:attr|how_many_more:6 as num_more %}
+                                                {% for v in attr_list_count|get_item:attr %}
+                                                    {% if forloop.counter0 < 6 %}
+                                                        <li class="checkbox">
+                                                            <label for="{{ attr }}-{{ v.value|replace_whitespace:'_' }}">
+                                                                <input type="checkbox" name="elements-selected" id="{{ attr }}-{{ v.value|replace_whitespace:'_' }}" >
+                                                                {{ v.value }}</label>
+                                                            <span class="count">({{ v.count }})</span>
+                                                        </li>
+                                                    {% elif forloop.counter0 == 6 and num_more > 0 %}
+                                                        <a class="show-more">{{ num_more }} more</a>
+                                                        <li class="extra-values checkbox" style="display:none;">
+                                                            <label for="{{ attr }}-{{ v.value|replace_whitespace:'_' }}">
+                                                                <input type="checkbox" name="elements-selected" id="{{ attr }}-{{ v.value|replace_whitespace:'_' }}" >
+                                                                {{ v.value }}
+                                                            </label>
+                                                            <span class="count">({{ v.count }})</span>
+                                                        </li>
+                                                    {% else %}
+                                                        <li class="extra-values checkbox" style="display:none;">
+                                                            <label for="{{ attr }}-{{ v.value|replace_whitespace:'_' }}">
+                                                                <input type="checkbox" name="elements-selected" id="{{ attr }}-{{ v.value|replace_whitespace:'_' }}" >
+                                                                {{ v.value }}
+                                                            </label>
+                                                            <span class="count">({{ v.count }})</span>
+                                                        </li>
+                                                    {% endif %}
+                                                {% endfor %}
+                                                {% if num_more > 0 %}
+                                                    <a class="show-less" style="display:none;">less</a>
+                                                {% endif %}
+                                            {% endwith %}
+                                        </ul>
+                                    </div>
+                                </li>
                             {% endif %}
                         {% endfor %}
-                    </div>
+                    </ul>
                 </div>
                 <!-- data filters tab -->
                 <div role="tabpanel" class="tab-pane" id="data-filters">
@@ -155,8 +165,8 @@
         </div>
     </div>
 
-    <div id="content-panel" class="col-md-8 col-md-offset-2">
-        <div class="selected-filters panel" style="display:none;">
+    <div id="content-panel" class="col-md-12">
+        <div class="selected-filters panel panel-default" style="display:none;">
             <div class="panel-heading">
                 <h4>New Filters <a role="button" id="clear-filters">Clear All</a></h4>
             </div>
@@ -165,9 +175,9 @@
             </div>
         </div>
 
-        <div class="cohort-selected-filters panel">
+        <div class="cohort-selected-filters panel panel-default">
             <div class="panel-heading">
-                <h4>Selected Filters</h4>
+                <h4 class="panel-title">Selected Filters</h4>
             </div>
             <div class="panel-body">
                 {% for filter in cohort.get_filters %}
@@ -178,9 +188,9 @@
             </div>
         </div>
 
-        <div class="cohort-info panel">
+        <div class="cohort-info panel panel-default">
             <div class="panel-heading">
-                <h4>Details</h4>
+                <h4 class="panel-title">Details</h4>
             </div>
             <div class="panel-body">
                 <p>Total Number of Samples: {{ total_samples }}</p>
@@ -204,9 +214,9 @@
             </div>
         </div>
 
-        <div class="clinical-trees panel">
+        <div class="clinical-trees panel panel-default">
             <div class="panel-heading">
-                <h4>Clinical Features</h4>
+                <h4 class="panel-title">Clinical Features</h4>
             </div>
             <div class="panel-body">
                 <div class="spinner" style="display:none;"><i class="fa fa-spinner fa-spin"></i></div>
