--- a/templates/share/site_header.html
+++ b/templates/share/site_header.html
@@ -83,6 +83,13 @@
             <li class="menu-item has-drop-down">
                 <a>PROJECTS <i class="fa fa-caret-down"></i></a>
                 <ul class="sub-menu drop">
+                    <!--Temporary code to showcase recent project items -->
+                    <li class="menu-item">
+                        <strong>Start New Workbook With ...</strong>
+                        <ul class="item-list">
+                            <li class="menu-item"><a href="">Project 1</a></li>
+                        </ul>
+                    </li>
                     {% if user.project_last_view_set.all|length > 0 %}
                     <li class="menu-item">
                         <strong>Start New Workbook With ...</strong>
@@ -124,6 +131,14 @@
             <li class="menu-item has-drop-down">
                 <a>GENES <i class="fa fa-caret-down"></i></a>
                 <ul class="sub-menu drop">
+                    <!--Temporary code to showcase recent genes item-->
+                    <li class="menu-item">
+                        <strong>Start New Workbook With ...</strong>
+                        <ul class="item-list">
+                            <li class="menu-item"><a href="">BRCA1</a></li>
+                            <li class="menu-item"><a href="">ATK Pathway</a></li>
+                        </ul>
+                    </li>
                     {% if user.genefavorite_last_view_set.all|length > 0 %}
                     <li class="menu-item">
                         <strong>Start New Workbook With ...</strong>
@@ -151,6 +166,15 @@
             <li class="menu-item has-drop-down">
                 <a>VARIABLES <i class="fa fa-caret-down"></i></a>
                 <ul class="sub-menu drop">
+                    <!--Temporary code to showcase recent variables items-->
+                    <li class="menu-item">
+                        <strong>Start New Workbook With ...</strong>
+                        <ul class="item-list">
+                            <li class="menu-item">
+                                <a href="">Variables Set 1</a>
+                            </li>
+                        </ul>
+                    </li>
                     {% if user.variablefavorite_last_view_set.all|length > 0 %}
                     <li class="menu-item">
                         <strong>Start New Workbook With ...</strong>
